# Agent-Orchestration-With-Human-Loop-

./: .gitignore  ARCHITECTURE.md  PRODUCTION.md  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/agents/: base.py  orchestrator.py
backend/api/: main.py
backend/memory/: store.py
backend/models/: schemas.py
backend/tests/ai/: test_evaluation.py
backend/tests/unit/: test_orchestrator.py
backend/workflows/: definitions.py
frontend/: jest.config.js
frontend/src/components/: AgentStream.tsx
frontend/src/components/__tests__/: AgentStream.test.tsx
frontend/src/hooks/: useAgentStream.ts
frontend/src/types/: index.ts
infrastructure/ci/: github-actions.yml
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
infrastructure/k8s/: deployment.yaml  namespace.yaml  secrets.yaml
